# hack104-rec

./: .gitignore  .gitmodules  .rsync-filter  pyproject.toml  train.conf
hack104_rec/: __init__.py  company.py  core.py  data.py  exp.py  feature.py  job.py  metric.py  misc.py  model.py  query_param.py  query_string.py  testset_click.py  train.py  train_action.py  train_click.py  utils.py
hack104_rec/es/: NOTE  insert.py  mapping.py
hack104_rec/template/: __init__.py  train.conf.j2
lab/: spark.ipynb  workplace.ipynb
lab/ryan/: workaround.ipynb
tests/: test_hack104_rec.py
